fix mobile hero cta spacing

--- a/templates/css/mobile.scss
+++ b/templates/css/mobile.scss
@@ -30,10 +30,10 @@
   .home-hero {
     text-align: center;
     .lead {
-      margin: 0 auto 3em;
+      margin: 0 auto 1.2em;
     }
     .sign-up-button {
-      margin: 0 auto;
+      margin: 0 auto 1em;
     }
   }
   .reasons {
